--- a/CDOM Spectral Plots - 2008.ipynb
+++ b/CDOM Spectral Plots - 2008.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "plt.style.use('_mpl-gallery')\n",
     "\n",
+    "# a new comment\n",
     "# make the data\n",
     "np.random.seed(3)\n",
     "x = 4 + np.random.normal(0, 2, 24)\n",
