Changed directories to fix PATH issue

--- a/CDOM Spectral Plots.ipynb
+++ b/CDOM Spectral Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -27,10 +27,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x217a42e5d90>]"
+       "[<matplotlib.lines.Line2D at 0x217a663c710>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
