--- a/CDOM Spectral Plots - 2008.ipynb
+++ b/CDOM Spectral Plots - 2008.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -423,19 +423,19 @@
        "[13590 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('./Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -513,10 +513,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x256abb88a50>]"
+       "[<matplotlib.lines.Line2D at 0x18a2d5aba10>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,7 +546,7 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv('./Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
     "rawdata = df[[\"Wavelength\",\"ag_35m\"]]  #df.loc['250':'700', ['Wavelength', 'ag_35m']]\n",
     "print(rawdata)\n",
     "data = rawdata.replace(r'^([A-Za-z])', np.NaN, regex=True)\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -673,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x256ae3b6250>]"
+       "[<matplotlib.lines.Line2D at 0x18a2dcb8850>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -705,7 +705,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "df = pd.read_csv('./Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
     "rawdata = df[[\"Wavelength\",\"ag_50m\"]]  #df.loc['250':'700', ['Wavelength', 'ag_50m']]\n",
     "print(rawdata)\n",
     "data = rawdata.replace(r'^([A-Za-z])', np.NaN, regex=True)\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -833,10 +833,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x256ae1fa350>]"
+       "[<matplotlib.lines.Line2D at 0x18a2dd7ba10>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -870,7 +870,7 @@
     "# print output to the console\n",
     "print(current_working_directory)\n",
     "\n",
-    "df = pd.read_csv('./Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
     "rawdata = df[[\"Wavelength\",\"ag_60m\"]]  #df.loc['250':'700', ['Wavelength', 'ag_60m']]\n",
     "print(rawdata)\n",
     "data = rawdata.replace(r'^([A-Za-z])', np.NaN, regex=True)\n",
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -997,10 +997,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x256ae0811d0>]"
+       "[<matplotlib.lines.Line2D at 0x18a2dc64650>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1030,7 +1030,7 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv('./Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/CDOM_Absorp.csv', sep=',')\n",
     "rawdata = df[[\"Wavelength\",\"ag_500m\"]]  #df.loc['250':'700', ['Wavelength', 'ag_500m']]\n",
     "print(rawdata)\n",
     "data = rawdata.replace(r'^([A-Za-z])', np.NaN, regex=True)\n",
