--- a/CDOM Spectral Plots.ipynb
+++ b/CDOM Spectral Plots.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"x = np.linspace(10, 9)\\ny = np.linspace(0,11)\\n#fig, ax = plt.subplots()\\nfig = plt.figure(figsize=(10,10))\\nax = fig.add_subplot(212)\\nplt.show()\\nax.set_ylabel('Depth', fontsize=13)\\nax.set_xlabel('ACDOM', fontsize=13)\\nplt.plot(x,y)\""
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'bin_depth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39m#path = '../Data/MUREP-In-Progress-Notebooks/Spectral CDOM Repos and CSVs/f64d5aab60_IOP_20130922_1701.txt'\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[39m# Diagnosing an issue with the delimiter and encoding that is probably messing up the way that the data is presenting itself\u001b[39;00m\n\u001b[0;32m     13\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m../Data/NASA MUREP/Spectral CDOM Repos and CSVs/f64d5aab60_IOP_20130922_1701.txt\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m'\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m, skiprows\u001b[39m=\u001b[39m\u001b[39m36\u001b[39m, header\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m---> 14\u001b[0m df\u001b[39m.\u001b[39;49mreplace(\u001b[39m'\u001b[39;49m\u001b[39mNone\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mgroupby(\u001b[39m'\u001b[39;49m\u001b[39mbin_depth\u001b[39;49m\u001b[39m'\u001b[39;49m, as_index\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\u001b[39m.\u001b[39magg(\u001b[39m\"\u001b[39m\u001b[39mm\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin)\n\u001b[0;32m     16\u001b[0m \u001b[39m#combinedrows = pd.DataFrame\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[39m#for i in range(0, len(df), 2):\u001b[39;00m\n\u001b[0;32m     18\u001b[0m     \u001b[39m#combinedrow = pd.concat([df.iloc[i], df.iloc[i+1]], axis=0)\u001b[39;00m\n\u001b[0;32m     19\u001b[0m     \u001b[39m#combinedrows = combinedrows.append\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[39m#print(combinedrows)\u001b[39;00m\n\u001b[0;32m     21\u001b[0m df\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:8252\u001b[0m, in \u001b[0;36mDataFrame.groupby\u001b[1;34m(self, by, axis, level, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[0;32m   8249\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mYou have to supply one of \u001b[39m\u001b[39m'\u001b[39m\u001b[39mby\u001b[39m\u001b[39m'\u001b[39m\u001b[39m and \u001b[39m\u001b[39m'\u001b[39m\u001b[39mlevel\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   8250\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_axis_number(axis)\n\u001b[1;32m-> 8252\u001b[0m \u001b[39mreturn\u001b[39;00m DataFrameGroupBy(\n\u001b[0;32m   8253\u001b[0m     obj\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m,\n\u001b[0;32m   8254\u001b[0m     keys\u001b[39m=\u001b[39;49mby,\n\u001b[0;32m   8255\u001b[0m     axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m   8256\u001b[0m     level\u001b[39m=\u001b[39;49mlevel,\n\u001b[0;32m   8257\u001b[0m     as_index\u001b[39m=\u001b[39;49mas_index,\n\u001b[0;32m   8258\u001b[0m     sort\u001b[39m=\u001b[39;49msort,\n\u001b[0;32m   8259\u001b[0m     group_keys\u001b[39m=\u001b[39;49mgroup_keys,\n\u001b[0;32m   8260\u001b[0m     observed\u001b[39m=\u001b[39;49mobserved,\n\u001b[0;32m   8261\u001b[0m     dropna\u001b[39m=\u001b[39;49mdropna,\n\u001b[0;32m   8262\u001b[0m )\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\groupby\\groupby.py:931\u001b[0m, in \u001b[0;36mGroupBy.__init__\u001b[1;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[0;32m    928\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropna \u001b[39m=\u001b[39m dropna\n\u001b[0;32m    930\u001b[0m \u001b[39mif\u001b[39;00m grouper \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 931\u001b[0m     grouper, exclusions, obj \u001b[39m=\u001b[39m get_grouper(\n\u001b[0;32m    932\u001b[0m         obj,\n\u001b[0;32m    933\u001b[0m         keys,\n\u001b[0;32m    934\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m    935\u001b[0m         level\u001b[39m=\u001b[39;49mlevel,\n\u001b[0;32m    936\u001b[0m         sort\u001b[39m=\u001b[39;49msort,\n\u001b[0;32m    937\u001b[0m         observed\u001b[39m=\u001b[39;49mobserved,\n\u001b[0;32m    938\u001b[0m         dropna\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdropna,\n\u001b[0;32m    939\u001b[0m     )\n\u001b[0;32m    941\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj \u001b[39m=\u001b[39m obj\n\u001b[0;32m    942\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39m_get_axis_number(axis)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\groupby\\grouper.py:985\u001b[0m, in \u001b[0;36mget_grouper\u001b[1;34m(obj, key, axis, level, sort, observed, validate, dropna)\u001b[0m\n\u001b[0;32m    983\u001b[0m         in_axis, level, gpr \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, gpr, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    984\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 985\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(gpr)\n\u001b[0;32m    986\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(gpr, Grouper) \u001b[39mand\u001b[39;00m gpr\u001b[39m.\u001b[39mkey \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    987\u001b[0m     \u001b[39m# Add key to exclusions\u001b[39;00m\n\u001b[0;32m    988\u001b[0m     exclusions\u001b[39m.\u001b[39madd(gpr\u001b[39m.\u001b[39mkey)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'bin_depth'"
+     ]
     }
    ],
    "source": [
@@ -25,20 +29,97 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "import netCDF4\n",
+    "import glob\n",
     "\n",
-    "f = netCDF4.Dataset('../Data/NASA MUREP/Spectral CDOM Repos and CSVS/gcoos_ioos-station-DISL-BSCA_2022_04.nc', 'r')\n",
-    "list(f.variables)\n",
+    "#path = '../Data/MUREP-In-Progress-Notebooks/Spectral CDOM Repos and CSVs/f64d5aab60_IOP_20130922_1701.txt'\n",
+    "# Diagnosing an issue with the delimiter and encoding that is probably messing up the way that the data is presenting itself\n",
+    "df = pd.read_csv('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/f64d5aab60_IOP_20130922_1701.txt', delimiter='\\t', encoding='utf-8', skiprows=36, header=None)\n",
+    "df.replace('None').groupby('bin_depth', as_index=False).agg(\"m\".join)\n",
+    "\n",
+    "#combinedrows = pd.DataFrame\n",
+    "#for i in range(0, len(df), 2):\n",
+    "    #combinedrow = pd.concat([df.iloc[i], df.iloc[i+1]], axis=0)\n",
+    "    #combinedrows = combinedrows.append\n",
+    "#print(combinedrows)\n",
+    "df\n",
+    "#df.tail()\n",
     "\n",
     "\n",
-    "'''x = np.linspace(10, 9)\n",
-    "y = np.linspace(0,11)\n",
-    "#fig, ax = plt.subplots()\n",
-    "fig = plt.figure(figsize=(10,10))\n",
-    "ax = fig.add_subplot(212)\n",
-    "plt.show()\n",
-    "ax.set_ylabel('Depth', fontsize=13)\n",
-    "ax.set_xlabel('ACDOM', fontsize=13)\n",
-    "plt.plot(x,y)'''"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>/end_header</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20130909 20 52 9 28.863608 -90.477003 137.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20130909 20 52 29 28.863710 -90.476975 100.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20130909 20 52 49 28.863818 -90.476932 92.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20130909 20 53 9 28.863920 -90.476882 106.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20130909 20 53 29 28.864015 -90.476867 160.000...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         /end_header\n",
+       "0  20130909 20 52 9 28.863608 -90.477003 137.0000...\n",
+       "1  20130909 20 52 29 28.863710 -90.476975 100.000...\n",
+       "2  20130909 20 52 49 28.863818 -90.476932 92.0000...\n",
+       "3  20130909 20 53 9 28.863920 -90.476882 106.0000...\n",
+       "4  20130909 20 53 29 28.864015 -90.476867 160.000..."
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_table('../Data/NASA MUREP/Spectral CDOM Repos and CSVs/f64d5aab60_GOMEX2013_20130909_underway.txt', skiprows=37)\n",
+    "df.head()"
    ]
   },
   {
